--- a/Hobbies.html
+++ b/Hobbies.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-87BDGG3CHE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-87BDGG3CHE');
+</script>
     <meta charset="utf-8">
     <title>Jack's Personal Site</title>
   </head>
