--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-87BDGG3CHE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-87BDGG3CHE');
+</script>
     <meta charset="utf-8">
     <title>Jack's Personal Site</title>
   </head>
@@ -11,7 +20,7 @@
       <tr>
         <td><img src="Jack Critchley Profile Picture.png" width ="200" height = "200" alt="Jack Critchley Profile Picture"></td>
         <td><h1>Jack Critchley</h1><em>Founder of this website and the <strong>Premier League Predictions</strong></em>
-        <p>I am attempting to learn code, spanish, and run a marathon in the next 12 months. 🤞</p></td>
+        <p>I am attempting to learn code, learn Spanish, and run a marathon in the next 12 months. 🤞</p></td>
       </tr>
     </table>
 
