--- a/Inputs.html
+++ b/Inputs.html
@@ -1,4 +1,14 @@
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-87BDGG3CHE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-87BDGG3CHE');
+</script>
+</head>
 <h3>Inputs</h3>
 
 <form class="" action="index.html" method="post">
