--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </ul>
 <hr size="5" noshade>
 
-<a href="hobbies.html">My Hobbies</a><p></p>
+<a href="Hobbies.html">My Hobbies</a><p></p>
 <a href="Contact details.html">Contact Me</a><p></p>
 <a href="Inputs.html"">Inputs Page</a>
 
